# piacere-mc-openapi

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  dev-requirements.txt  docker-compose.yaml  gen_domlr_reference.py  pyproject.toml  requirements.txt  uwsgi_config.yaml
.gitlab/issue_templates/: issue.md
docs/: conf.py  dict_reference.rst  index.rst  installation.rst  reference_index.rst  reference_v2.0.rst  reference_v2.1.rst  reference_v2.2.1.rst  reference_v2.2.rst  reference_v2.3.rst  requirements.rst  requirements.txt  restapis.rst  tests.rst  usage.rst  writing-requirements.rst
mc_openapi/: __main__.py  app_config.py  handlers.py  string_uri.py  subnets.domlr
mc_openapi/assets/: doml.ecore  doml_meta.yaml  doml_meta_v2.0.yaml  doml_meta_v2.1.1.yaml  doml_meta_v2.1.yaml  doml_meta_v2.2.1.yaml  doml_meta_v2.2.yaml  doml_meta_v2.3.yaml  doml_v1.0.ecore  doml_v2.1.1.ecore  doml_v2.1.ecore  doml_v2.2.1.ecore  doml_v2.2.ecore  doml_v2.3.ecore
mc_openapi/doml_mc/: __init__.py  _utils.py  common_reqs.py  consistency_reqs.py  dict_reference.ipynb  error_desc_helper.py  example.ipynb  example_faas.ipynb  example_nginx.ipynb  example_nginx_iterative.ipynb  find_missing_requirement.ipynb  find_missing_requirement_with_attrs.ipynb  html_output.py  imc.py  main.py  mc.py  mc_result.py  test.ipynb  utils.py
mc_openapi/dsl_parser/: grammar.lark  parser.ipynb  parser.py  utils.py
mc_openapi/notebooks/: csp_compatibility.ipynb  dict_reference.ipynb  example_faas.ipynb  example_nginx.ipynb  find_missing_requirement.ipynb  find_missing_requirement_with_attrs.ipynb  stats.ipynb  test.ipynb
mc_openapi/openapi/: model_checker.yaml
mc_openapi/templates/: csp.html.jinja  home.html  mc.html.jinja  style.css
tests/: test_mc_openapi.py  test_modelchecker.py
tests/doml/: POSIDONIA.doml  POSIDONIA_wrong.doml  faas.domlx  nginx-openstack_v2.0_valid_mem_req.domlx  nginx-openstack_v2.0_wrong_all_SoftwareComponents_deployed.doml  nginx-openstack_v2.0_wrong_all_concrete_map_something.doml  nginx-openstack_v2.0_wrong_iface_uniq.domlx  (+4 more)
(+113 files in other folders)
