[tool.poetry]
name = "mc_openapi"
version = "0.1.0"
description = "OpenAPI interface for the PIACERE DOML model checker."
authors = ["Michele Chiari <michele.chiari@polimi.it>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
connexion = {extras = ["swagger-ui"], version = "^2.9.0"}
uWSGI = "^2.0.20"
pyecore = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
