[tool.poetry]
name = "mc_openapi"
version = "1.2.0"
description = "OpenAPI interface for the PIACERE DOML model checker."
authors = ["Michele Chiari <michele.chiari@polimi.it>", "Michele De Pascalis <michele.de.pascalis.1024@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
connexion = {extras = ["swagger-ui"], version = "^2.14"}
pyecore = "^0.12.2"
z3-solver = "^4.9"
PyYAML = "^6.0"
networkx = "^2.8"
joblib = "^1.1"
uvicorn = {extras = ["standard"], version = "^0.18"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
requests = "^2.28"
ipykernel = "^6.15"
prettyprinter = "^0.18"
Sphinx = "^5.0"
sphinx-rtd-theme = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
